[package]
name = "solc-metadata-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
bs58 = "0.5.1"
clap = { version = "4.5.31", features = ["derive"] }
eyre = "0.6.12"
hex = "0.4.3"
multihash = "0.19.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_cbor = "0.11.2"
serde_with = "3.12.0"
